# iroh-raft

./: .gitignore  .mcp.json  API_DESIGN.md  CLAUDE.md  Cargo.toml  ERGONOMICS_IMPLEMENTATION.md  FIX_PLAN.md  INTEGRATION_STRATEGY.md  IROH_NATIVE_MANAGEMENT.md  NEW_API_README.md  PERFORMANCE_FIX_PLAN.md  PROTOCOL_IMPLEMENTATION.md  README.md  TESTING.md  TEST_SUMMARY.md  ZERO_COPY_OPTIMIZATIONS.md  flake.nix  openapi.yaml  size_test.rs
.claude/commands/: iroh-raft-prompt.md
.serena/: project.yml
examples/: administrative_ops.rs  check_iroh_api.rs  cluster_api_example.rs  cluster_deployment.rs  config_example.rs  connection_pooling_example.rs  distributed_kv_store.rs  iroh_native_management.rs  management_api_example.rs  metrics_shutdown_example.rs  monitoring_integration.rs  performance_comparison.rs  performance_optimized_example.rs  production_cluster.rs  protocol_example.rs  simple_cluster.rs  simple_cluster_example.rs  simple_example.rs  test_iroh.rs  zero_copy_example.rs
examples/madsim_demo/: Cargo.toml  MADSIM_TESTING_GUIDE.md
examples/madsim_demo/src/: main.rs
src/: actor_patterns.rs  admin.rs  backpressure.rs  circuit_breaker.rs  cluster.rs  cluster_api.rs  config.rs  error.rs  error.rs.backup  lib.rs  lock_free.rs  metrics.rs  node.rs  test_helpers.rs  timeout_manager.rs  types.rs
src/discovery/: registry.rs
src/management/: auth.rs  client.rs  config.rs  discovery.rs  events.rs  handlers.rs  mod.rs  protocol.rs  schemas.rs  server.rs
src/raft/: bootstrap.rs  config_manager.rs  core.rs  event_loop.rs  generic_state_machine.rs  generic_state_machine.rs.bak  handlers.rs  kv_example.rs  messages.rs  mod.rs  optimized_batch_processor.rs  optimized_processing.rs  optimized_proposals.rs  proposals.rs  snapshot.rs  state_machine.rs
src/storage/: codec.rs  mod.rs  redb.rs  simple.rs
src/transport/: adapter.rs  endpoint_manager.rs  iroh.rs  mod.rs  protocol.rs  service.rs  shared.rs  simple.rs
tests/: api_integration_tests.rs  connection_pooling_tests.rs  graceful_shutdown_tests.rs  integration_tests.rs  madsim_distributed_tests.rs  madsim_tests.rs  management_api_tests.rs  property_tests.rs  property_tests_basic.rs  property_tests_minimal.rs  standalone_madsim_tests.rs  test_runner.rs  test_serialization.rs  zero_copy_tests.rs
