[package]
name = "iroh-raft"
version = "0.1.0"
edition = "2021"
authors = ["Blixard Contributors"]
description = "Distributed consensus library using Raft, Iroh P2P, and Redb storage"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blixard/iroh-raft"
keywords = ["raft", "consensus", "distributed", "p2p", "iroh"]
categories = ["network-programming", "database", "concurrency"]

[dependencies]
# Core async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Raft consensus
raft = { version = "0.7", default-features = false, features = ["prost-codec"] }
raft-proto = { version = "0.7", default-features = false, features = ["prost-codec"] }

# Storage backend
redb = "2.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"
humantime-serde = "1.1"
postcard = { version = "1.0", features = ["use-std"] }
prost = "0.11"  # Must match raft-proto's prost version

# Iroh P2P networking
iroh = "0.91"

# Error handling
snafu = "0.8"
thiserror = "2.0"
anyhow = "1.0"
base64 = "0.22"

# Observability
tracing = "0.1"
opentelemetry = { version = "0.27", optional = true }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
bytes = "1.8"
parking_lot = "0.12"
once_cell = "1.20"
num_cpus = "1.16"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# Testing utilities
proptest = { version = "1.5", optional = true }
tempfile = { version = "3.14", optional = true }
madsim = { version = "0.2", optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.14"
proptest = "1.5"
tokio-test = "0.4"
pretty_assertions = "1.0"
test-case = "3.0"
thiserror = "1.0"

[features]
default = []
test-helpers = ["tempfile", "proptest"]
metrics-otel = ["opentelemetry"]
madsim = ["dep:madsim"]

# Optional dependencies can be added later as needed

# Benchmarks can be added later when needed
# [[bench]]
# name = "raft_transport"
# harness = false

[lib]
name = "iroh_raft"
path = "src/lib.rs"
